fix: solve overflow issue of contact form

--- a/assets/styles/pages/contact.css
+++ b/assets/styles/pages/contact.css
@@ -1,5 +1,8 @@
 .contact-page {
-  width: 100vw;
+  width: 80vw;
+  margin: 0 9vw;
+  position: relative;
+  left: 1vw;
 }
 
 .contact-row {
